Fix HTML entity encoding in htmlindex.html

--- a/htmlindex.html
+++ b/htmlindex.html
@@ -29,7 +29,7 @@
             <p><strong>Click</strong> - View painting</p>
             <p><strong>Space</strong> - Jump</p>
             <a href="https://www.voltemf.com" target="_blank" class="controls-bear">
-                <img src="./images/Bear.png" alt="Bear mascot" class="bear-image">
+                <img src="Bear.png" alt="Bear mascot" class="bear-image">
             </a>
         </div>
 
