Update print statement from 'Hello' to 'Goodbye'

--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
             margin: 0;
             padding: 100px 40px 80px;
             text-align: left;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./HISTOVERALL.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('HISTOVERALL.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
