Enhance painting modal with citations feature
Added citations button and content to painting modal.

--- a/htmlindex.html
+++ b/htmlindex.html
@@ -63,6 +63,11 @@
             <div class="painting-info">
                 <h2 id="paintingTitle"></h2>
                 <p id="paintingDescription"></p>
+                <button id="citationsBtn" class="citations-btn">Citations</button>
+                <div id="citationsContent" class="citations-content">
+                    <h3>Citations</h3>
+                    <ol id="citationsList"></ol>
+                </div>
             </div>
         </div>
         <button id="closeModal" class="close-btn">×</button>
